added create page UI

--- a/ember-ios/app.json
+++ b/ember-ios/app.json
@@ -47,7 +47,8 @@
           "configureAndroidBackup": true,
           "faceIDPermission": "Allow Ember to access your Face ID biometric data."
         }
-      ]
+      ],
+      "@react-native-community/datetimepicker"
     ],
     "experiments": {
       "typedRoutes": true,
